added config server

--- a/Gateway/src/main/resources/bootstrap.properties
+++ b/Gateway/src/main/resources/bootstrap.properties
@@ -22,4 +22,4 @@ zuul.ignored-services=*
 #zuul.routes.commentservice.path=/comment/**
 #zuul.routes.commentservice.serviceId=comment
 zuul.routes.companionService.path=/companion/**
-zuul.routes.companionService.serviceId=companionService
+zuul.routes.companionService.serviceId=companion
