--- a/Comment/bin/pom.xml
+++ b/Comment/bin/pom.xml
@@ -8,11 +8,11 @@
 		<version>2.1.8.RELEASE</version>
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
-	<groupId>com.example</groupId>
-	<artifactId>ads</artifactId>
+	<groupId>com.jp</groupId>
+	<artifactId>Comment</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>ads</name>
-	<description>Project for ads</description>
+	<name>Comment</name>
+	<description>Project for comments</description>
 
 	<properties>
 		<java.version>1.8</java.version>
@@ -38,14 +38,6 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-		<dependency>
-			<groupId>org.springframework.cloud</groupId>
-			<artifactId>spring-cloud-starter-config</artifactId>
-		</dependency>
-<!-- 		<dependency>
-		   <groupId>org.springframework.cloud</groupId>
-		   <artifactId>spring-cloud-starter-bus-amqp</artifactId>
-		</dependency> -->
 	</dependencies>
 
 	<dependencyManagement>
