--- a/Companion/pom.xml
+++ b/Companion/pom.xml
@@ -43,8 +43,16 @@
 				spring-cloud-starter-netflix-hystrix
 			</artifactId>
 		</dependency>
-	</dependencies>
+		<dependency>
+			<groupId>org.springframework.cloud</groupId>
+			<artifactId>spring-cloud-starter-config</artifactId>
+		</dependency>
+<!-- 		<dependency>
+		   <groupId>org.springframework.cloud</groupId>
+		   <artifactId>spring-cloud-starter-bus-amqp</artifactId>
+		</dependency> -->
 
+		</dependencies>
 	<dependencyManagement>
 		<dependencies>
 			<dependency>
