--- a/Companion/src/main/resources/application.properties
+++ b/Companion/src/main/resources/application.properties
@@ -1,6 +1,10 @@
-spring.application.name=companionService
+spring.application.name=companion
 # Port
 server.port=0
 # Eureka server url
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
+eureka.instance.instance-id=${random.uuid}
+spring.cloud.config.uri=http://localhost:8888
+#spring.profiles.active=production
+management.endpoints.web.exposure.include=refresh
 
