--- a/ad/src/main/resources/application.properties
+++ b/ad/src/main/resources/application.properties
@@ -4,3 +4,9 @@ spring.application.name=adService
 server.port=0
 # Eureka server url
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
+eureka.instance.instance-id=${random.uuid}
+
+spring.cloud.config.uri=http://localhost:8888
+#spring.profiles.active=production
+management.endpoints.web.exposure.include=refresh
+
