--- a/Comment/src/main/resources/application.properties
+++ b/Comment/src/main/resources/application.properties
@@ -3,4 +3,6 @@ spring.application.name=commentservice
 server.port=0
 # Eureka server url
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
-eureka.instance.instance-id=${random.uuid}
+#eureka.instance.instance-id=${random.uuid}
+spring.zipkin.base-url=http://localhost:9411/
+spring.sleuth.sampler.probability=1
