--- a/Companion/src/main/resources/application.properties
+++ b/Companion/src/main/resources/application.properties
@@ -3,8 +3,9 @@ spring.application.name=companion
 server.port=0
 # Eureka server url
 eureka.client.service-url.default-zone=http://localhost:8761/eureka
-eureka.instance.instance-id=${random.uuid}
+#eureka.instance.instance-id=${random.uuid}
 spring.cloud.config.uri=http://localhost:8888
 #spring.profiles.active=production
 management.endpoints.web.exposure.include=refresh
-
+spring.zipkin.base-url=http://localhost:9411/
+spring.sleuth.sampler.probability=1
