--- a/Gateway/src/main/resources/bootstrap.properties
+++ b/Gateway/src/main/resources/bootstrap.properties
@@ -6,6 +6,7 @@ eureka.client.registerWithEureka=false
 eureka.client.fetchRegistry=true 
 # exposes actuator all end points 
 management.endpoints.web.exposure.include=*
+spring.zipkin.base-url=http://localhost:9411/
 
 
 # response timeout settings
